changed isBlank to support Java 8